[package]
name = "unzipper"
version = "0.2.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[dependencies]
zip = "0.5.13"
futures = { version = "0.3.21", default-features = false, features = [ "std" ] }
indicatif = "0.17.0-rc.9"
thiserror = "1.0.30"

[dev-dependencies]
tempfile = "3.3.0"
futures = { version = "0.3.21", features = [ "executor"] }